--- a/resources/style.css
+++ b/resources/style.css
@@ -55,3 +55,17 @@ h1 {
 .abouttext p {
     flex-wrap: wrap;
 }
+.kontakt {
+    display: block;
+    border: 3px solid black;
+    border-radius: 20px;
+}
+.kontaktlist {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.kontaktitems {
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
+}
